# RNTuple-Arrow-Gateway

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
benchmark/: CMakeLists.txt  bench_cpp_path.cpp  bench_flight.py  bench_python_path.py  plot_results.py  run_benchmarks.sh.in
benchmark/data/: gen_bench_fixture.cpp
benchmark/results/: cpp_path.json  flight.csv  python_path.csv  system_info.txt
cmake/: RAGCompileOptions.cmake  RAGDependencies.cmake
docker/: dev.Dockerfile
engine/: CMakeLists.txt
engine/include/rag/: batch_builder.hpp  options.hpp  reader.hpp  schema.hpp  status.hpp
engine/src/: batch_builder.cpp  reader.cpp  schema.cpp
engine/src/internal/: column_appender.hpp
engine/tests/: CMakeLists.txt  test_batch_builder.cpp  test_hello.cpp  test_list_columns.cpp  test_schema.cpp
engine/tests/data/: gen_fixture.cpp  gen_fixture_lists.cpp
flight_server/: CMakeLists.txt  main.cpp  service.cpp  service.hpp
flight_server/tests/: CMakeLists.txt  test_flight_lists.py  test_flight_python.py  test_flight_roundtrip.cpp
python/: CMakeLists.txt
python/rag_gateway/: __init__.py  _native.pyi
python/src/: bindings.cpp
python/tests/: test_list_columns.py  test_roundtrip.py
scripts/: ci.sh
